<resources>
    <string name="app_name">Falcon</string>
    <string name="need_new_account">Need New Account ?</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="already_have_account">Already Have Account</string>
    <string name="login_to_your_account">Login to your account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_status">Your Status</string>
    <string name="save_changes">Save Changes</string>
    <string name="welcom_to_falcon_chat_app">Welcom To Falcon Chat App</string>
</resources>
