<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".StartActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageStart"
        android:layout_width="133dp"
        android:layout_height="153dp"
        android:layout_marginTop="40dp"
        android:background="@color/colorPrimaryDark"
        android:src="@drawable/icon2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="70dp"
        android:gravity="center"
        android:padding="13dp"
        android:text="@string/welcom_to_falcon_chat_app"
        android:textColor="@color/colorPrimaryVersion2"
        android:textSize="40sp" />

    <Button
        android:id="@+id/logbtn"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/colorAccent"
        android:padding="7dp"
        android:text="@string/already_have_account"
        android:textColor="#fff"
        android:textSize="30sp" />

    <Button
        android:id="@+id/startReqbtn"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:padding="5dp"
        android:text="@string/need_new_account"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp" />

</LinearLayout>