<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <include
        android:id="@+id/loginAppBar"
        layout="@layout/start_app_bar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <TextView
        android:id="@+id/CreateAccountTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:text="@string/login_to_your_account"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />




    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/logEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="12dp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/logPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="13dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="13dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/logbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="185dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:background="@color/colorPrimary"
        android:padding="15dp"
        android:text="@string/login"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />


</LinearLayout>